--- a/Nettsia/assets/main.css
+++ b/Nettsia/assets/main.css
@@ -1,10 +1,14 @@
 .header {
-	background-color: LightBlue;
-
+	background-color: #2c415f;
 }
 
 
 .container {
     text-align: center;
-    background-color: OldLace;
+    background-color: #252b33;
+}
+
+body {
+    color: White;
+    background-color: #252b33; 
 }
