--- a/Nettsia/assets/css/main.css
+++ b/Nettsia/assets/css/main.css
@@ -1,13 +1,7 @@
-body {
-    color: white;
-    background-color: #252b33; 
-}
-
-a { color: #ffffff; }
-
 .header {
 	background-color: #2c415f;
 }
+
 
 .container {
     text-align: center;
@@ -17,3 +11,7 @@ a { color: #ffffff; }
 	background-color: #2c415f;
 }
 
+body {
+    color: White;
+    background-color: #252b33; 
+}
